# AI_Cue

./: .gitignore  Agent.md  README.md  TODO.md  detailed introduction of technologies.md  index.html  package-lock.json  package.json  screen-capture-protection.md  screenshot.html  tsconfig.node.json  vite.config.ts
.cursor/rules/: agent-harness.mdc
.github/workflows/: build-windows.yml
docs/plans/: 2026-03-12-windows-system-audio-capture-design.md  2026-03-12-windows-system-audio-capture.md
src/: App.tsx  index.css  screenshot.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  nls.rs  qwen.rs  screenshot.rs
src-tauri/src/audio/: mod.rs  recorder.rs  types.rs  windows_wasapi.rs
src/components/: MessageContent.tsx  ScreenshotSelector.tsx  SettingsPanel.tsx  ShortcutSettingsPanel.tsx
src/hooks/: useShortcutRecorder.ts
src/services/: aiChat.ts  shortcutManager.ts  speechRecognition.ts
src/store/: config.ts
