[package]
name = "ai-cue"
version = "0.1.0"
description = "AI Cue - 不被屏幕捕获的面试助手"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ai_cue_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
