[package]
name = "ai-cue"
version = "0.1.0"
description = "AI Cue - 不被屏幕捕获的面试助手"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ai_cue_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 音频录制依赖
hound = "3.5"
once_cell = "1.19"
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_Media_Audio", "Win32_Media_KernelStreaming", "Win32_System_Com", "Win32_System_Threading"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
