[package]
name = "ai-cue"
version = "0.1.0"
description = "AI Cue - 不被屏幕捕获的面试助手"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ai_cue_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "protocol-asset"] }
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for API calls (bypasses CORS)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
futures-util = "0.3"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
uuid = { version = "1.10", features = ["v4"] }
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# 音频录制依赖
hound = "3.5"
once_cell = "1.19"
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_Media_Audio", "Win32_Media_KernelStreaming", "Win32_System_Com", "Win32_System_Threading"] }

# 截图依赖
screenshots = "0.8"
image = "0.25"
tauri-plugin-dialog = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
